<resources>
    <string name="app_name">QuizLite</string>

    <!--  shared preferences  -->
    <string name="saved_study_set">saved_study_set</string>
    <string name="has_saved">has_saved</string>
    <string name="set_name">name</string>
    <string name="set_topic">topic</string>
    <string name="desc">desc</string>
    <string name="set_content">content</string>
    <string name="empty_flag">empty</string> <!-- flag for set_content key value = value when invalidating cached shared pref data -->

    <!--  CreateStudySetActivity  -->
    <string name="quizlite">QuizLite</string>
    <string name="subheading">The best flashcard app out there</string>
    <string name="study">Study</string>
    <string name="create">Create</string>
    <string name="general">General</string>
    <string name="create_set_subheading">Configure general study set properties</string>
    <string name="name">Name</string>
    <string name="topic">Topic</string>
    <string name="desc_hint">Add a description for this study set (optional)</string>
    <string name="next">Next</string>
    <string name="erase">Erase</string>
    <string name="error1">Name and Topic are mandatory fields. Please enter valid values to continue.</string>
    <string name="erase_title">Erase Data</string>
    <string name="erase_message">Are you sure you want to erase saved data? This means your progress creating this study set will be lost.</string>

    <!--  CreateContentActivity  -->
    <string name="content">Content</string>
    <string name="create_content_subheading">Add study content card by card</string>
    <string name="error2">Please fill out both fields</string>
    <string name="keyHint">Key/Term/Question</string>
    <string name="valueHint">Value/Definition/Answer</string>
    <string name="new_card">New</string>
    <string name="done">Done</string>
    <string name="not_saved_title">Data Not Saved</string>
    <string name="not_saved_message">Are you sure you want to go back? Your input is not valid for the current card, so this card\'s info will not be saved. Everything else will be saved so you can resume editing later.</string>

    <!--  StudySetsActivity  -->
    <string name="study_sets">Study Sets</string>
    <string name="study_sets_subheading">Review your accumulated knowledge</string>
    <string name="cards">Cards:</string>
    <string name="no_study_sets">No Study Sets...</string>
    <string name="no_cards">No cards...</string>

</resources>
